bugs in data collection system resolved.

--- a/examples/posed_image_dataset_collection_real.ipynb
+++ b/examples/posed_image_dataset_collection_real.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,29 +19,22 @@
     "dataset_path = 'dataset/dec13'\n",
     "seg_path = os.path.join(dataset_path, 'seg')\n",
     "rgb_path = os.path.join(dataset_path, 'rgb')\n",
-    "depth_path = os.path.join(dataset_path, 'depth')\n",
-    "\n",
-    "if os.path.exists(depth_path):\n",
-    "        shutil.rmtree(depth_path)\n",
-    "# Create the input_model directory\n",
-    "os.makedirs(depth_path, exist_ok=True)\n",
-    "\n",
-    "if os.path.exists(rgb_path):\n",
-    "        shutil.rmtree(rgb_path)\n",
-    "# Create the input_model directory\n",
-    "os.makedirs(rgb_path, exist_ok=True)\n",
-    "\n",
-    "if os.path.exists(seg_path):\n",
-    "        shutil.rmtree(seg_path)\n",
-    "# Create the input_model directory\n",
-    "os.makedirs(seg_path, exist_ok=True)"
+    "depth_path = os.path.join(dataset_path, 'depth')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Interface Running...\n"
+     ]
+    }
+   ],
    "source": [
     "from FR3Py.robot.interface import FR3Real\n",
     "robot = FR3Real()"
@@ -56,18 +49,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'q': array([ 0.03425916, -0.79588279,  0.10933217, -2.24385623,  0.07870369,\n",
+       "         1.47826138,  0.9071297 ,  0.        ,  0.        ]),\n",
+       " 'dq': array([ 1.08549789e-03,  2.41791477e-04,  1.05473932e-03,  3.48421948e-04,\n",
+       "        -7.82151241e-05, -3.58909477e-05, -2.17971407e-04,  0.00000000e+00,\n",
+       "         0.00000000e+00]),\n",
+       " 'T': array([ 0.23338582, -3.55056119, -2.8945415 , 22.46154976,  0.52067471,\n",
+       "         2.49645758, -0.16631913,  0.        ,  0.        ])}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "robot.getStates()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 2.5.1 (SDL 2.28.2, Python 3.8.15)\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n",
+      "Put your stick at zero location and do not touch it\n"
+     ]
+    }
+   ],
    "source": [
     "from pyJoy.joy_daq import JoyManager\n",
     "import time    \n",
@@ -79,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,9 +132,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Taking a picture\n",
+      "Taking a picture\n",
+      "Taking a picture\n",
+      "Taking a picture\n",
+      "Dataset collection procedure ended.\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "import numpy as np\n",
@@ -125,6 +157,21 @@
     "import pandas as pd\n",
     "from scipy.spatial.transform import Rotation as R\n",
     "shutter_old = 0 \n",
+    "\n",
+    "if os.path.exists(depth_path):\n",
+    "        shutil.rmtree(depth_path)\n",
+    "# Create the input_model directory\n",
+    "os.makedirs(depth_path, exist_ok=True)\n",
+    "\n",
+    "if os.path.exists(rgb_path):\n",
+    "        shutil.rmtree(rgb_path)\n",
+    "# Create the input_model directory\n",
+    "os.makedirs(rgb_path, exist_ok=True)\n",
+    "\n",
+    "if os.path.exists(seg_path):\n",
+    "        shutil.rmtree(seg_path)\n",
+    "# Create the input_model directory\n",
+    "os.makedirs(seg_path, exist_ok=True)\n",
     "\n",
     "def write_depth(depth, filename):\n",
     "    depth = depth.astype(np.uint16)\n",
@@ -155,8 +202,8 @@
     "ef_poses = []\n",
     "stamps = []\n",
     "pose_dataset = []\n",
-    "running = True\n",
-    "while running:\n",
+    "running = 0\n",
+    "while running==0:\n",
     "    trans = controller.robot.getInfo(q,dq)['P_EE']\n",
     "    rot = controller.robot.getInfo(q,dq)['R_EE']\n",
     "    stamps.append(time.time())\n",
@@ -192,8 +239,8 @@
     "        color = camera.color_frame\n",
     "        print('Taking a picture')\n",
     "        write_depth(depth, os.path.join(depth_path, f'{stamp_ns}.png'))\n",
-    "        write_color(color, os.path.join(seg_path, 'color', f'{stamp_ns}.png'))\n",
-    "        pos = pose[:,3].squeeze()\n",
+    "        write_color(color, os.path.join(rgb_path, f'{stamp_ns}.png'))\n",
+    "        pos = pose[0:3,3].squeeze()\n",
     "        q = R.from_matrix(pose[:3,:3]).as_quat().squeeze()\n",
     "        pose_dataset.append(np.hstack([stamp_ns, pos, q]))\n",
     "    else:\n",
