joystick class is added

--- a/examples/posed_image_dataset_collection_real.ipynb
+++ b/examples/posed_image_dataset_collection_real.ipynb
@@ -89,9 +89,9 @@
     }
    ],
    "source": [
-    "from pyJoy.joy_daq import JoyManager\n",
+    "from FR3Py.joysticks import PyGameJoyManager\n",
     "import time    \n",
-    "joy1  = JoyManager()\n",
+    "joy1  = PyGameJoyManager()\n",
     "joy1.start_daq(joy_idx=0)\n",
     "joy1.offset_calibration()\n",
     "time.sleep(3)"
