--- a/examples/robot_interface_tutorial.ipynb
+++ b/examples/robot_interface_tutorial.ipynb
@@ -150,23 +150,23 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 7,
+         "execution_count": 1,
          "metadata": {},
          "outputs": [
             {
                "name": "stdout",
                "output_type": "stream",
                "text": [
-                  "pygame 2.5.1 (SDL 2.28.2, Python 3.9.16)\n",
+                  "pygame 2.5.1 (SDL 2.28.2, Python 3.8.10)\n",
                   "Hello from the pygame community. https://www.pygame.org/contribute.html\n",
                   "Put your stick at zero location and do not touch it\n"
                ]
             }
          ],
          "source": [
-            "from pyJoy.joy_daq import JoyManager\n",
+            "from FR3Py.joysticks import PyGameJoyManager\n",
             "import time    \n",
-            "joy1  = JoyManager()\n",
+            "joy1  = PyGameJoyManager()\n",
             "joy1.start_daq(joy_idx=0)\n",
             "joy1.offset_calibration()\n",
             "time.sleep(3)"
@@ -258,7 +258,7 @@
          "name": "python",
          "nbconvert_exporter": "python",
          "pygments_lexer": "ipython3",
-         "version": "3.9.16"
+         "version": "3.8.10"
       }
    },
    "nbformat": 4,
