eye on base calibration data and scripts are added

--- a/examples/posed_image_dataset_collection_real.ipynb
+++ b/examples/posed_image_dataset_collection_real.ipynb
@@ -10,13 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import shutil\n",
-    "dataset_path = 'dataset/dec13'\n",
+    "dataset_path = 'dataset/apr24'\n",
     "seg_path = os.path.join(dataset_path, 'seg')\n",
     "rgb_path = os.path.join(dataset_path, 'rgb')\n",
     "depth_path = os.path.join(dataset_path, 'depth')"
@@ -24,17 +24,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Interface Running...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from FR3Py.robot.interface import FR3Real\n",
     "robot = FR3Real()"
@@ -49,45 +41,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'q': array([ 0.03425916, -0.79588279,  0.10933217, -2.24385623,  0.07870369,\n",
-       "         1.47826138,  0.9071297 ,  0.        ,  0.        ]),\n",
-       " 'dq': array([ 1.08549789e-03,  2.41791477e-04,  1.05473932e-03,  3.48421948e-04,\n",
-       "        -7.82151241e-05, -3.58909477e-05, -2.17971407e-04,  0.00000000e+00,\n",
-       "         0.00000000e+00]),\n",
-       " 'T': array([ 0.23338582, -3.55056119, -2.8945415 , 22.46154976,  0.52067471,\n",
-       "         2.49645758, -0.16631913,  0.        ,  0.        ])}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "robot.getStates()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 2.5.1 (SDL 2.28.2, Python 3.8.15)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n",
-      "Put your stick at zero location and do not touch it\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from FR3Py.joysticks import PyGameJoyManager\n",
     "import time    \n",
@@ -99,21 +64,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enabling streams for camera:  141322250720\n",
-      "Warning: HD color fps cannot be higher than 30\n",
-      "Warning: HD depth/infrared fps cannot be higher than 30\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from FR3Py.vision.cameras import RealSenseCamera\n",
+    "from SimpleHandEye.interfaces.cameras import RealSenseCamera\n",
     "camera = RealSenseCamera(VGA=False, enable_imu=False, enable_ir=True, emitter_enabled=True, align_to_color=False)\n",
     "ext_params = camera.getExtrinsics()\n",
     "int_params = camera.getIntrinsics()"
@@ -121,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,21 +87,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Taking a picture\n",
-      "Taking a picture\n",
-      "Taking a picture\n",
-      "Taking a picture\n",
-      "Dataset collection procedure ended.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import time\n",
     "import numpy as np\n",
@@ -191,6 +134,8 @@
     "state = robot.getStates()\n",
     "\n",
     "q, dq = state['q'], state['dq']\n",
+    "q = np.hstack([q, np.zeros(2)])\n",
+    "dq = np.hstack([dq, np.zeros(2)])\n",
     "p0 = controller.robot.getInfo(q,dq)['P_EE']\n",
     "R0 = controller.robot.getInfo(q,dq)['R_EE']\n",
     "\n",
@@ -249,9 +194,23 @@
     "    T= T0@np.vstack([np.hstack([R0, np.array([x0,y0,z0]).reshape(3,1)]), np.array([0,0,0,1])])\n",
     "    state = robot.getStates()\n",
     "    q, dq = state['q'], state['dq']\n",
+    "    q = np.hstack([q, np.zeros(2)])\n",
+    "    dq = np.hstack([dq, np.zeros(2)])\n",
     "    cmd = controller.compute(q,dq, T_cmd=T)\n",
-    "    robot.sendCommands(cmd)\n",
+    "    # robot.setCommands(cmd[:7])\n",
+    "    robot.setCommands(np.zeros(7))\n",
     "\n",
+    "pd.DataFrame(data=pose_dataset, columns=['id', 'x', 'y', 'z', 'qx', 'qy', 'qz', 'qw']).to_csv(f'{dataset_path}/pose.csv', index=False)\n",
+    "print('Dataset collection procedure ended.')\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "pd.DataFrame(data=pose_dataset, columns=['id', 'x', 'y', 'z', 'qx', 'qy', 'qz', 'qw']).to_csv(f'{dataset_path}/pose.csv', index=False)\n",
     "print('Dataset collection procedure ended.')\n",
     "cv2.destroyAllWindows()"
@@ -274,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.8.18"
   },
   "orig_nbformat": 4,
   "vscode": {
