--- a/examples/robot_interface_tutorial.ipynb
+++ b/examples/robot_interface_tutorial.ipynb
@@ -35,17 +35,9 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 1,
+         "execution_count": null,
          "metadata": {},
-         "outputs": [
-            {
-               "name": "stdout",
-               "output_type": "stream",
-               "text": [
-                  "Interface Running...\n"
-               ]
-            }
-         ],
+         "outputs": [],
          "source": [
             "import sys \n",
             "from FR3Py.robot.interface import FR3Real\n",
@@ -62,27 +54,9 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 2,
+         "execution_count": null,
          "metadata": {},
-         "outputs": [
-            {
-               "data": {
-                  "text/plain": [
-                     "{'q': array([ 3.19840116e-04, -7.84208998e-01, -2.34529158e-04, -2.35632430e+00,\n",
-                     "         4.17956734e-04,  1.57000401e+00,  7.85716726e-01,  0.00000000e+00,\n",
-                     "         0.00000000e+00]),\n",
-                     " 'dq': array([ 7.97927658e-04, -4.55017990e-04,  2.11986707e-04,  9.29398056e-04,\n",
-                     "         2.99767555e-04,  2.20032375e-05, -1.20979616e-04,  0.00000000e+00,\n",
-                     "         0.00000000e+00]),\n",
-                     " 'T': array([ 0.02708699, -5.1136713 , -0.40705362, 23.02490425,  0.56004238,\n",
-                     "         2.61639166, -0.13976884,  0.        ,  0.        ])}"
-                  ]
-               },
-               "execution_count": 2,
-               "metadata": {},
-               "output_type": "execute_result"
-            }
-         ],
+         "outputs": [],
          "source": [
             "robot.getStates()"
          ]
@@ -96,17 +70,9 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 6,
+         "execution_count": null,
          "metadata": {},
-         "outputs": [
-            {
-               "name": "stdout",
-               "output_type": "stream",
-               "text": [
-                  "starting the controller\n"
-               ]
-            }
-         ],
+         "outputs": [],
          "source": [
             "import time\n",
             "import numpy as np\n",
@@ -119,6 +85,8 @@
             "if state is not None:\n",
             "    print('starting the controller')\n",
             "    q, dq = state['q'], state['dq']\n",
+            "    q = np.hstack([q, np.zeros(2)])\n",
+            "    dq = np.hstack([dq, np.zeros(2)])\n",
             "    p0 = controller.robot.getInfo(q,dq)['P_EE']\n",
             "    R0 = controller.robot.getInfo(q,dq)['R_EE']\n",
             "    T0 = np.vstack([np.hstack([R0, p0.reshape(3,1)]), np.array([0,0,0,1])])\n",
@@ -131,10 +99,12 @@
             "        T= T0 @ np.vstack([np.hstack([np.eye(3), np.array([0,0,x]).reshape(3,1)]), np.array([0,0,0,1])])\n",
             "        state = robot.getStates()\n",
             "        q, dq = state['q'], state['dq']\n",
+            "        q = np.hstack([q, np.zeros(2)])\n",
+            "        dq = np.hstack([dq, np.zeros(2)])\n",
             "        cmd = controller.compute(q, dq, T_cmd=T)\n",
-            "        robot.sendCommands(cmd)\n",
+            "        robot.setCommands(cmd[:7])\n",
             "\n",
-            "    robot.sendCommands(np.zeros(9))\n",
+            "    robot.setCommands(np.zeros(7))\n",
             "    print('Demo ended.')\n",
             "else:\n",
             "    print('State is None. check the connection')"
@@ -150,19 +120,9 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 1,
+         "execution_count": null,
          "metadata": {},
-         "outputs": [
-            {
-               "name": "stdout",
-               "output_type": "stream",
-               "text": [
-                  "pygame 2.5.1 (SDL 2.28.2, Python 3.8.10)\n",
-                  "Hello from the pygame community. https://www.pygame.org/contribute.html\n",
-                  "Put your stick at zero location and do not touch it\n"
-               ]
-            }
-         ],
+         "outputs": [],
          "source": [
             "from FR3Py.joysticks import PyGameJoyManager\n",
             "import time    \n",
@@ -174,18 +134,9 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 9,
+         "execution_count": null,
          "metadata": {},
-         "outputs": [
-            {
-               "name": "stdout",
-               "output_type": "stream",
-               "text": [
-                  "starting the controller\n",
-                  "Demo ended.\n"
-               ]
-            }
-         ],
+         "outputs": [],
          "source": [
             "import time\n",
             "import numpy as np\n",
@@ -199,6 +150,8 @@
             "if state is not None:\n",
             "    print('starting the controller')\n",
             "    q, dq = state['q'], state['dq']\n",
+            "    q = np.hstack([q, np.zeros(2)])\n",
+            "    dq = np.hstack([dq, np.zeros(2)])\n",
             "    p0 = controller.robot.getInfo(q,dq)['P_EE']\n",
             "    R0 = controller.robot.getInfo(q,dq)['R_EE']\n",
             "    T0 = np.vstack([np.hstack([R0, p0.reshape(3,1)]), np.array([0,0,0,1])])\n",
@@ -232,10 +185,12 @@
             "        T= T0@np.vstack([np.hstack([R0, np.array([x0,y0,z0]).reshape(3,1)]), np.array([0,0,0,1])])\n",
             "        state = robot.getStates()\n",
             "        q, dq = state['q'], state['dq']\n",
+            "        q = np.hstack([q, np.zeros(2)])\n",
+            "        dq = np.hstack([dq, np.zeros(2)])\n",
             "        cmd = controller.compute(q,dq, T_cmd=T)\n",
-            "        robot.sendCommands(cmd)\n",
+            "        robot.setCommands(cmd[:7])\n",
             "    \n",
-            "    robot.sendCommands(np.zeros(9))\n",
+            "    robot.setCommands(np.zeros(7))\n",
             "    print('Demo ended.')\n",
             "else:\n",
             "    print('State is None. check the connection')"
@@ -258,7 +213,7 @@
          "name": "python",
          "nbconvert_exporter": "python",
          "pygments_lexer": "ipython3",
-         "version": "3.8.10"
+         "version": "3.8.18"
       }
    },
    "nbformat": 4,
