eye on base calibration dataset and notebook is added.

--- a/examples/posed_image_dataset_collection_real.ipynb
+++ b/examples/posed_image_dataset_collection_real.ipynb
@@ -10,13 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import shutil\n",
-    "dataset_path = 'dataset/apr24'\n",
+    "dataset_path = 'dataset/apr27'\n",
     "seg_path = os.path.join(dataset_path, 'seg')\n",
     "rgb_path = os.path.join(dataset_path, 'rgb')\n",
     "depth_path = os.path.join(dataset_path, 'depth')"
@@ -24,9 +24,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Interface Running...\n"
+     ]
+    }
+   ],
    "source": [
     "from FR3Py.robot.interface import FR3Real\n",
     "robot = FR3Real()"
@@ -41,18 +49,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'q': array([ 8.63941914e-04, -7.85562271e-01,  4.09466144e-03, -2.50432516e+00,\n",
+       "         6.43262257e-04,  1.56899149e+00,  7.86522003e-01]),\n",
+       " 'dq': array([ 0.00086346,  0.00030254, -0.00175622,  0.00044854,  0.00081198,\n",
+       "         0.00053098,  0.00153839]),\n",
+       " 'T': array([-0.08401799, -4.17108297, -0.9263519 , 23.32584   ,  0.72526777,\n",
+       "         1.94913459, -0.06360409])}"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "robot.getStates()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Put your stick at zero location and do not touch it\n"
+     ]
+    }
+   ],
    "source": [
     "from FR3Py.joysticks import PyGameJoyManager\n",
     "import time    \n",
@@ -64,9 +96,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enabling streams for camera:  318122302882\n",
+      "Warning: HD color fps cannot be higher than 30\n",
+      "Warning: HD depth/infrared fps cannot be higher than 30\n"
+     ]
+    }
+   ],
    "source": [
     "from SimpleHandEye.interfaces.cameras import RealSenseCamera\n",
     "camera = RealSenseCamera(VGA=False, enable_imu=False, enable_ir=True, emitter_enabled=True, align_to_color=False)\n",
@@ -76,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,9 +129,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[26], line 84\u001b[0m\n\u001b[1;32m     82\u001b[0m camera\u001b[38;5;241m.\u001b[39mgrab_frames()\n\u001b[1;32m     83\u001b[0m cv2\u001b[38;5;241m.\u001b[39mimshow(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcolor\u001b[39m\u001b[38;5;124m'\u001b[39m, camera\u001b[38;5;241m.\u001b[39mcolor_frame)\n\u001b[0;32m---> 84\u001b[0m \u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwaitKey\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     85\u001b[0m \u001b[38;5;66;03m# Take a snapshot if required\u001b[39;00m\n\u001b[1;32m     86\u001b[0m shutter \u001b[38;5;241m=\u001b[39m digital[\u001b[38;5;241m2\u001b[39m]\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "import numpy as np\n",
