example bugs are fixed

--- a/examples/02-pick-n-place.ipynb
+++ b/examples/02-pick-n-place.ipynb
@@ -9,7 +9,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 2,
+         "execution_count": null,
          "metadata": {},
          "outputs": [],
          "source": [
@@ -41,7 +41,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 5,
+         "execution_count": null,
          "metadata": {},
          "outputs": [],
          "source": [
@@ -85,7 +85,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 6,
+         "execution_count": null,
          "metadata": {},
          "outputs": [],
          "source": [
@@ -135,7 +135,7 @@
          "source": [
             "import sys \n",
             "from FR3Py.robot.interface import FR3Real\n",
-            "robot = FR3Real()"
+            "robot = FR3Real(robot_id='fr3')"
          ]
       },
       {
@@ -152,7 +152,7 @@
          "metadata": {},
          "outputs": [],
          "source": [
-            "robot.getStates()"
+            "robot.getJointStates()"
          ]
       },
       {
@@ -227,10 +227,20 @@
          "metadata": {},
          "outputs": [],
          "source": [
+            "state"
+         ]
+      },
+      {
+         "cell_type": "code",
+         "execution_count": null,
+         "metadata": {},
+         "outputs": [],
+         "source": [
             "import numpy as np\n",
             "from FR3Py.controllers.jacobianPseudoInv import WaypointController\n",
             "import time\n",
             "controller = WaypointController(kp=1.5)\n",
+            "time.sleep(1)\n",
             "dt = 0.01\n",
             "for i in range(40000):\n",
             "    state = robot.getJointStates()\n",
