--- a/examples/robot_interface_tutorial.ipynb
+++ b/examples/robot_interface_tutorial.ipynb
@@ -35,13 +35,21 @@
       },
       {
          "cell_type": "code",
-         "execution_count": null,
+         "execution_count": 13,
          "metadata": {},
-         "outputs": [],
+         "outputs": [
+            {
+               "name": "stdout",
+               "output_type": "stream",
+               "text": [
+                  "Interface Running...\n"
+               ]
+            }
+         ],
          "source": [
             "import sys \n",
             "from FR3Py.robot.interface import FR3Real\n",
-            "robot = FR3Real()"
+            "robot = FR3Real(robot_id='fr3')"
          ]
       },
       {
@@ -54,11 +62,27 @@
       },
       {
          "cell_type": "code",
-         "execution_count": null,
+         "execution_count": 14,
          "metadata": {},
-         "outputs": [],
+         "outputs": [
+            {
+               "data": {
+                  "text/plain": [
+                     "{'q': array([-6.51406912e-05, -7.85172720e-01,  2.84258223e-04, -2.35672392e+00,\n",
+                     "         3.50003373e-04,  1.57029797e+00,  7.85698755e-01]),\n",
+                     " 'dq': array([ 8.15426003e-05,  1.18722517e-04,  4.85325481e-04,  3.25609841e-04,\n",
+                     "         3.49640579e-04, -4.79078854e-04, -4.39302759e-04]),\n",
+                     " 'T': array([ 0.11434627, -4.27423239, -1.12868345, 23.50436783,  0.32335123,\n",
+                     "         2.83811164, -0.31354305])}"
+                  ]
+               },
+               "execution_count": 14,
+               "metadata": {},
+               "output_type": "execute_result"
+            }
+         ],
          "source": [
-            "robot.getStates()"
+            "robot.getJointStates()"
          ]
       },
       {
@@ -70,9 +94,30 @@
       },
       {
          "cell_type": "code",
-         "execution_count": null,
+         "execution_count": 15,
          "metadata": {},
-         "outputs": [],
+         "outputs": [
+            {
+               "name": "stdout",
+               "output_type": "stream",
+               "text": [
+                  "starting the controller\n"
+               ]
+            },
+            {
+               "ename": "AssertionError",
+               "evalue": "q vector should be 9 or 7",
+               "output_type": "error",
+               "traceback": [
+                  "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+                  "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+                  "Cell \u001b[0;32mIn[15], line 28\u001b[0m\n\u001b[1;32m     26\u001b[0m     q \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mhstack([q, np\u001b[38;5;241m.\u001b[39mzeros(\u001b[38;5;241m2\u001b[39m)])\n\u001b[1;32m     27\u001b[0m     dq \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mhstack([dq, np\u001b[38;5;241m.\u001b[39mzeros(\u001b[38;5;241m2\u001b[39m)])\n\u001b[0;32m---> 28\u001b[0m     cmd \u001b[38;5;241m=\u001b[39m \u001b[43mcontroller\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcompute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mq\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdq\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mT_cmd\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mT\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     29\u001b[0m     robot\u001b[38;5;241m.\u001b[39msetCommands(cmd[:\u001b[38;5;241m7\u001b[39m])\n\u001b[1;32m     31\u001b[0m robot\u001b[38;5;241m.\u001b[39msetCommands(np\u001b[38;5;241m.\u001b[39mzeros(\u001b[38;5;241m7\u001b[39m))\n",
+                  "File \u001b[0;32m/home/FR3Py/FR3Py/controllers/jacobianPseudoInv.py:43\u001b[0m, in \u001b[0;36mWaypointController.compute\u001b[0;34m(self, q, dq, T_cmd)\u001b[0m\n\u001b[1;32m     40\u001b[0m q \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mhstack([q, np\u001b[38;5;241m.\u001b[39mzeros(\u001b[38;5;241m2\u001b[39m)])\n\u001b[1;32m     41\u001b[0m dq \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mhstack([dq, np\u001b[38;5;241m.\u001b[39mzeros(\u001b[38;5;241m2\u001b[39m)])\n\u001b[0;32m---> 43\u001b[0m info \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrobot\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgetInfo\u001b[49m\u001b[43m(\u001b[49m\u001b[43mq\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdq\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     44\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m T_cmd \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m     45\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mp_cmd \u001b[38;5;241m=\u001b[39m T_cmd[\u001b[38;5;241m0\u001b[39m:\u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m1\u001b[39m)\n",
+                  "File \u001b[0;32m/home/FR3Py/FR3Py/robot/model.py:88\u001b[0m, in \u001b[0;36mPinocchioModel.getInfo\u001b[0;34m(self, q, dq)\u001b[0m\n\u001b[1;32m     85\u001b[0m _q \u001b[38;5;241m=\u001b[39m q\u001b[38;5;241m.\u001b[39msqueeze()\n\u001b[1;32m     86\u001b[0m _dq \u001b[38;5;241m=\u001b[39m dq\u001b[38;5;241m.\u001b[39msqueeze()\n\u001b[0;32m---> 88\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m _q\u001b[38;5;241m.\u001b[39mshape \u001b[38;5;241m==\u001b[39m (\u001b[38;5;241m9\u001b[39m,) \u001b[38;5;129;01mor\u001b[39;00m _q\u001b[38;5;241m.\u001b[39mshape \u001b[38;5;241m==\u001b[39m (\u001b[38;5;241m7\u001b[39m,), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mq vector should be 9 or 7\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     89\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m _dq\u001b[38;5;241m.\u001b[39mshape \u001b[38;5;241m==\u001b[39m (\u001b[38;5;241m9\u001b[39m,) \u001b[38;5;129;01mor\u001b[39;00m _dq\u001b[38;5;241m.\u001b[39mshape \u001b[38;5;241m==\u001b[39m (\u001b[38;5;241m7\u001b[39m,), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdq vector should be 9 or 7,\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     91\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m q\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m7\u001b[39m:\n",
+                  "\u001b[0;31mAssertionError\u001b[0m: q vector should be 9 or 7"
+               ]
+            }
+         ],
          "source": [
             "import time\n",
             "import numpy as np\n",
@@ -81,7 +126,7 @@
             "controller = WaypointController(kp=1.5)\n",
             "# Read the initial state of the robot\n",
             "time.sleep(0.2)\n",
-            "state = robot.getStates()\n",
+            "state = robot.getJointStates()\n",
             "if state is not None:\n",
             "    print('starting the controller')\n",
             "    q, dq = state['q'], state['dq']\n",
@@ -97,7 +142,7 @@
             "        t = time.time() - start_time\n",
             "        x = 0.1 * np.sin(t)\n",
             "        T= T0 @ np.vstack([np.hstack([np.eye(3), np.array([0,0,x]).reshape(3,1)]), np.array([0,0,0,1])])\n",
-            "        state = robot.getStates()\n",
+            "        state = robot.getJointStates()\n",
             "        q, dq = state['q'], state['dq']\n",
             "        q = np.hstack([q, np.zeros(2)])\n",
             "        dq = np.hstack([dq, np.zeros(2)])\n",
@@ -213,7 +258,7 @@
          "name": "python",
          "nbconvert_exporter": "python",
          "pygments_lexer": "ipython3",
-         "version": "3.8.18"
+         "version": "3.10.12"
       }
    },
    "nbformat": 4,
