--- a/examples/01-joint-interface.ipynb
+++ b/examples/01-joint-interface.ipynb
@@ -43,7 +43,7 @@
          "source": [
             "import sys \n",
             "from FR3Py.robot.interface import FR3Real\n",
-            "robot = FR3Real()"
+            "robot = FR3Real(robot_id='fr3')"
          ]
       },
       {
@@ -60,7 +60,7 @@
          "metadata": {},
          "outputs": [],
          "source": [
-            "robot.getStates()"
+            "robot.getJointStates()"
          ]
       },
       {
@@ -72,8 +72,9 @@
             "import time\n",
             "import numpy as np\n",
             "for i in range(100):\n",
-            "    robot.setCommands(np.array([0, 0, 0, 0, 0, 0, 1]))\n",
-            "    time.sleep(0.01)"
+            "    robot.setCommands(np.array([0, 0, 0, 0, 0, 0, -1]))\n",
+            "    time.sleep(0.01)\n",
+            "robot.setCommands(np.array([0, 0, 0, 0, 0, 0, 0]))"
          ]
       },
       {
@@ -118,7 +119,7 @@
             "controller = WaypointController(kp=1.5)\n",
             "# Read the initial state of the robot\n",
             "time.sleep(0.2)\n",
-            "state = robot.getStates()\n",
+            "state = robot.getJointStates()\n",
             "if state is not None:\n",
             "    print('starting the controller')\n",
             "    q, dq = state['q'], state['dq']\n",
@@ -134,10 +135,8 @@
             "        t = time.time() - start_time\n",
             "        x = 0.1 * np.sin(t)\n",
             "        T= T0 @ np.vstack([np.hstack([np.eye(3), np.array([0,0,x]).reshape(3,1)]), np.array([0,0,0,1])])\n",
-            "        state = robot.getStates()\n",
+            "        state = robot.getJointStates()\n",
             "        q, dq = state['q'], state['dq']\n",
-            "        q = np.hstack([q, np.zeros(2)])\n",
-            "        dq = np.hstack([dq, np.zeros(2)])\n",
             "        cmd = controller.compute(q, dq, T_cmd=T)\n",
             "        robot.setCommands(cmd[:7])\n",
             "\n",
@@ -153,6 +152,15 @@
          "source": [
             "### DiffIK with Joystick input\n",
             "Now that we can control the pose of the end-effector in the task space, let's command the robot using a joystick. For this example, I use a Logitech Extreme 3D Pro joystick and read it using a helper class based on Pygame:"
+         ]
+      },
+      {
+         "cell_type": "code",
+         "execution_count": null,
+         "metadata": {},
+         "outputs": [],
+         "source": [
+            "cmd.shape"
          ]
       },
       {
@@ -250,7 +258,7 @@
          "name": "python",
          "nbconvert_exporter": "python",
          "pygments_lexer": "ipython3",
-         "version": "3.8.18"
+         "version": "3.10.12"
       }
    },
    "nbformat": 4,
